force-app/main/default/objects/Business_Unit__c/Business_Unit__c.object-meta.xml
<CustomObject>
  <label>Business Unit</label>
  <pluralLabel>Business Units</pluralLabel>
  <nameField>
    <type>Text</type>
    <label>Business Unit</label>
  </nameField>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>