force-app/main/default/objects/Business_Unit__c/fields/Customer_Service_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service_Email__c</fullName>
    <description>Brand-specific customer service email address</description>
    <inlineHelpText>Brand-specific customer service email address</inlineHelpText>
    <label>Customer Service Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>