force-app/main/default/objects/Business_Unit__c/fields/Customer_Service_Phone__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service_Phone__c</fullName>
    <description>Brand-specific customer service number</description>
    <inlineHelpText>Brand-specific customer service number</inlineHelpText>
    <label>Customer Service Phone</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>