force-app/main/default/objects/Business_Unit__c/fields/Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Legal Entity</label>
    <referenceTo>Legal_Entity__c</referenceTo>
    <relationshipLabel>Legal Entities</relationshipLabel>
    <relationshipName>Legal_Entities</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>