force-app/main/default/objects/Business_Unit__c/fields/No_Reply_Email__c.field-meta.xml
<CustomField>
    <fullName>No_Reply_Email__c</fullName>
    <inlineHelpText>Brand-specific no-reply email address.</inlineHelpText>
    <label>No-Reply Email</label>
    <type>Email</type>
</CustomField>