force-app/main/default/objects/Business_Unit__c/fields/Ownership_Model__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Model__c</fullName>
    <label>Ownership Model</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Company-Owned</fullName>
            </value>
            <value>
                <fullName>Franchise</fullName>
            </value>
            <value>
                <fullName>Joint Venture</fullName>
            </value>
            <value>
                <fullName>Licensed</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>