force-app/main/default/objects/Business_Unit__c/fields/Parent_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Parent_Business_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Business Unit</label>
    <referenceTo>Business_Unit__c</referenceTo>
    <relationshipLabel>Child Business Units</relationshipLabel>
    <relationshipName>Parent_Business_Unit_Business_Units</relationshipName>
    <type>Lookup</type>
</CustomField>