force-app/main/default/objects/Business_Unit__c/fields/Short_Code__c.field-meta.xml
<CustomField>
    <fullName>Short_Code__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>e.g., PLS, CTL, CHS, used as an identifier code for each business unit. 3 character maxiumum length</inlineHelpText>
    <label>Short Code</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>