force-app/main/default/objects/Business_Unit__c/fields/Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Short_Name__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>e.g., PULSE, CAMAS, used in naming schemes.</inlineHelpText>
    <label>Short Name</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>