force-app/main/default/objects/Business_Unit__c/fields/Support_Email__c.field-meta.xml
<CustomField>
    <fullName>Support_Email__c</fullName>
    <inlineHelpText>Brand-specific support email address.</inlineHelpText>
    <label>Support Email</label>
    <type>Email</type>
</CustomField>