force-app/main/default/objects/Business_Unit__c/fields/Support_Phone__c.field-meta.xml
<CustomField>
    <fullName>Support_Phone__c</fullName>
    <inlineHelpText>Brand-specific support number</inlineHelpText>
    <label>Support Phone</label>
    <type>Phone</type>
</CustomField>