force-app/main/default/objects/Business_Unit__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Entity</fullName>
            </value>
            <value>
                <fullName>Brand</fullName>
            </value>
            <value>
                <fullName>Division</fullName>
            </value>
            <value>
                <fullName>Region</fullName>
            </value>
            <value>
                <fullName>Location</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>