force-app/main/default/objects/Business_Unit__c/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <inlineHelpText>Brand-specific website address</inlineHelpText>
    <label>Website</label>
    <type>Url</type>
</CustomField>